# flash_backup

./: .config.json  .ignore  Cargo.toml  README.md  config.json  ignore  input_temp_test_text.txt
src/: config.rs  copying.rs  main.rs  multiple_mode.rs  serialization.rs  user_data.rs
src/io/: config.rs  copying.rs  serialization.rs
src/lib/: lib.rs
src/lib/backups/: mod.rs
src/lib/backups/helpers/: dirs.rs  hashing.rs  mod.rs  multithreading.rs
src/lib/backups/map/: backup_dir.rs  backup_entry.rs  backup_map.rs  backup_mode.rs  mod.rs
src/lib/backups/modes/: backup_cloud.rs  backup_multiple.rs  mod.rs
src/lib/backups/traits/: backup.rs  backup_copy.rs  backup_ignore.rs  backup_input.rs  backup_output.rs  backup_serialize.rs  mod.rs
src/lib/config/: config.rs  mod.rs
src/lib/config/modes/: cli.rs
src/lib/io/: config.rs  copying.rs  metadata.rs  mod.rs  serialization.rs
src/lib/modes/: cloud_mode.rs  mod.rs  multiple_mode.rs
src/modes/: multiple_mode.rs
