[package]
name = "flash_backup"
version = "0.2.0"
authors = ["szymon-trybala"]
edition = "2018"

[lib]
name = "flash_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "flash_backup"
path = "src/bin/main.rs"

[dependencies]
walkdir = "2.3.1"
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0"
hex = "0.4.2"
ring = "0.16.11"
meowhash = "0.1.3"
digest = "0.8.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4"