[package]
name = "flash_backup"
version = "0.9.0"
authors = ["szymon-trybala <szymon.trybala@protonmail.com>"]
edition = "2018"

[[bin]]
name = "flash_backup"
path = "src/bin/main.rs"

[lib]
name = "flash_backup"
path = "src/lib/lib.rs"

[dependencies]
walkdir = "2"
meowhash = "0.2"
digest = "0.8"
hex = "0.4"