[package]
name = "flash_backup"
version = "0.9.0"
authors = ["szymon-trybala <szymon.trybala@protonmail.com>"]
edition = "2018"

[[bin]]
name = "flash_backup"
path = "src/bin/main.rs"

[lib]
name = "flash_backup"
path = "src/lib/lib.rs"

[dependencies]
walkdir = "2.*"
meowhash = "0.2.*"
digest = "0.8.*"
ring = "0.16.*"
hex = "0.4.*"
num_cpus = "1.0.*"
scoped_threadpool = "0.1.*"
uuid = { version = "0.8.*", features = ["serde", "v4"] }
serde = {version = "1.0.*", features = ["derive"]}
serde_json = "1.*"
chrono = "0.4.*"